Renamed verified to isActive

--- a/app/views/mail/register.scala.html
+++ b/app/views/mail/register.scala.html
@@ -1,7 +1,8 @@
 @( name: String, brainDBresult: String )
 Hello @name,
 
-thank you for signing up for an webKnossos account! Your account is going to get activated after an administrator has verified you.
+thank you for signing up for an webKnossos account! Your account is going to get
+  activated after an administrator has reviewed your details.
 
 @brainDBresult
 
