--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -174,6 +174,27 @@ td.nowrap * {
   .alert:hover {
     box-shadow: 0 0 10px rgba(100, 100, 100, .2);
   }
+  .alert iframe {
+    border: none;
+    min-height: 200px;
+  }
+
+  @keyframes alert-wiggle {
+    0%  { transform: translateX(0px); }
+    2%  { transform: translateX(10px); }
+    4%  { transform: translateX(-10px); }
+    6%  { transform: translateX(10px); }
+    8%  { transform: translateX(-10px); }
+    10% { transform: translateX(10px); }
+    12% { transform: translateX(-10px); }
+    14% { transform: translateX(10px); }
+    16% { transform: translateX(-10px); }
+    18% { transform: translateX(10px); }
+    20% { transform: translateX(0px); }
+  }
+  .alert-wiggle {
+    animation: alert-wiggle 5s infinite;
+  }
 }
 
 #stats {
