alert iframe styling

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -176,7 +176,10 @@ td.nowrap * {
   }
   .alert iframe {
     border: none;
-    min-height: 200px;
+    height: 200px;
+    width: 500px;
+    max-width: 80vw;
+    resize: both;
   }
 
   @keyframes alert-wiggle {
