--- a/app/assets/stylesheets/admin/_user.less
+++ b/app/assets/stylesheets/admin/_user.less
@@ -9,4 +9,13 @@
   .row-fluid:not(:first-child) {
     margin-bottom: 10px;
   }
+
+  .center-text {
+    text-align: center;
+  }
+
+  #status-column {
+    width: 120px;
+    text-align: center;
+  }
 }
