--- a/app/assets/stylesheets/trace_view/_action_bar.less
+++ b/app/assets/stylesheets/trace_view/_action_bar.less
@@ -14,6 +14,10 @@
     width: 200px;
   }
 
+  #trace-position-input {
+    width: 160px;
+  }
+
   & > .container-fluid > div {
     display: inline-block;
     margin-right: 15px;
