fixed shortcuts in help

--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -77,9 +77,9 @@
       <tr><td>Shift + Arrow</td><td>Rotation around Axis</td></tr>
       <tr><td>B, J</td><td>Set/Jump to last branchpoint</td></tr>
       <tr><td>R</td><td>Reset rotation</td></tr>
-      <tr><td>W, A, S, D</td><td>Move sideways</td></tr>
-      <tr><td>Y</td><td>Center active node</td></tr>
-      <tr><td>Z, U</td><td>Start/Stop recording waypoints</td></tr>
+      <tr><td>S</td><td>Center active node</td></tr>
+      <tr><td>D</td><td>Forward without recording waypoints</td></tr>
+      <tr><td>F</td><td>Backward without recording waypoints</td></tr>
       <tr><td>Shift + Space</td><td>Delete active node, Recenter previous node</td></tr>
     </tbody>
   </table>
