Add automatic redirect on login

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -106,7 +106,7 @@
         }.getOrElse {
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="@controllers.routes.Authentication.login()">Login</a>
+              <a href="@controllers.routes.Authentication.login(None)">Login</a>
             </li>
           </ul>
         }
