--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[(String, String)])(implicit session: oxalis.view.SessionData, messages: Messages)
+@(form: Form[(String, String, String)])(implicit session: oxalis.view.SessionData, messages: Messages)
 
 @main(){
 
@@ -19,7 +19,7 @@
 
         @helper.inputText(form("email"), 'type -> "email", 'class -> "form-control")
         @helper.inputPassword(form("password"), 'class -> "form-control")
-
+        <input type="hidden" name="redirect" value="@form("redirect").value" />
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-5">
             <button type="submit" class="form-control btn btn-primary">Login</button>
