added link to wk discussion board to header #1574

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -83,6 +83,11 @@
             <li>
               <a href="#script-modal" id="add-script-link" class="hide"><i class="fa fa-gear fa-fw"></i>Add script</a>
             </li>
+            @if(user.hasAdminAccess){
+              <li>
+                <a href="https://discuss.webknossos.org" target="_blank"><i class="fa fa-comments fa-fw"></i>Discussion Board</a>
+              </li>
+            }
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
