lots of files strictly flowed

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -34,13 +34,13 @@
   .active {
     border-color: #ff0;
   }
-  #planeyz {
+  #inputcatcher_PLANE_YZ {
     margin-left: 20px;
   }
-  #planexz {
+  #inputcatcher_PLANE_XZ {
     margin-top: 20px;
   }
-  #TDView {
+  #inputcatcher_TDView {
     margin-top: 20px;
     margin-left: 20px;
     position: relative;
