added volume mode settings #1691

--- a/app/assets/stylesheets/trace_view/_settings.less
+++ b/app/assets/stylesheets/trace_view/_settings.less
@@ -17,5 +17,10 @@
   .settings-row {
     margin-bottom: 10px;
   }
+
+  .setting-label {
+    word-wrap: break-word;
+    white-space: normal;
+  }
 }
 
