--- a/app/views/user/register.scala.html
+++ b/app/views/user/register.scala.html
@@ -38,6 +38,11 @@
           <button type="submit" class="form-control btn btn-primary">Sign up</button>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+          <a href="@routes.Authentication.login(None)">Already have an account? Go to Login.</a>
+        </div>
+      </div>
     }
     </div>
   </div>
