fixes dataset spotlight icon arrangement

--- a/app/assets/stylesheets/_datasets.less
+++ b/app/assets/stylesheets/_datasets.less
@@ -14,11 +14,12 @@
   }
 }
 
-.link-row {
-  display: inline-block;
-  width: 150px;
-  height: 50px;
-  margin: 50% 20%;
+.dataset-thumbnail-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
 
   a {
     width: 40px;
@@ -27,6 +28,7 @@
     background: rgba(0, 0, 0, 0.8);
     display: inline-block;
     position: relative;
+    margin: 0 3px;
 
     img {
       width: 25px;
@@ -52,4 +54,3 @@
   }
 
 }
-
