adds signup button to navbar

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -113,6 +113,9 @@
             <li>
               <a href="@controllers.routes.Authentication.login(None)">Login</a>
             </li>
+            <li>
+              <a href="@controllers.routes.Authentication.register()">Sign up</a>
+            </li>
           </ul>
         }
       </div>
