updates FAQ browser section

--- a/app/views/help/faq.scala.html
+++ b/app/views/help/faq.scala.html
@@ -6,17 +6,17 @@
     <p></p>
 
     <h4>Which browsers are supported for webKnossos?</h4>
-    <p>webKnossos runs best with Google Chrome. We use it to test and develop the software and recommend it.</p>
-    <p> However, any other modern browser that supports the full <a href="http://get.webgl.org/">WebGl specification</a>
-      should work as well. We have had good success with the following browsers:
+    <p>webKnossos runs best with the latest version of Google Chrome. We use it to test and develop the software and recommend it.</p>
+    <p>However, any other modern browser in their latest version should work as well. We have had good success with the following browsers:
     </p>
-      <ul>
-        <li>Firefox 27+</li>
-        <li>Opera 20+</li>
-        <li>Safari 7.0.3 <a href="http://www.ikriz.nl/2011/08/23/enable-webgl-in-safari/">(how to enable WebGl)</a></li>
-      </ul>
+    <ul>
+      <li>Firefox 51+</li>
+      <li>Opera 43+</li>
+      <li>Edge 14+</li>
+      <li>Safari 10</li>
+    </ul>
     <p>
-    At the time of this writing Internet Explorer 11 and below are not supported.
+    Internet Explorer is not supported.
     </p>
     <h4><a name="taskqueries"></a>What are possible task queries?</h4>
     <p>You can use every possible mongo db query in the task query field. That includes quering for specific attribute
