Reactify Settings + Introduce Redux (#1697)
* added React View for tracing settings (WIP)

* added more settings / views

* added redux store #1691

* added redux + redux-saga #1691

* added bounding box input with validation #1691

* added dataset & user setting view #1691

* fixed saving for dataset settings #1691

* replaced all datasetconfig accesses with store accesses #1691

* fixed datasetconfiguration event listener #1691

* replaced all dataset references with store accesses #1691

* replace all calls to model.user with store access #1691

* some fixes

* more fixes

* removed all backbone settings views #1691

* rearranged settings tabs #1691

* added flight mode settings #1691

* added volume mode settings #1691

* fixed many linting errors #1691

* connected active id to settings #1691

* removed flow coverage from module #1691

* show/hide setting depending on view mode #1691

* fixed all flow + linting errors

* display bounding box values #1691

* fixed pushing default settings to server

* fixed mouse inversion #1691

* fixed unit test #1691

* fixed arbitrary mode #1691

* foo #1691

* initialize active id with zero #1691

* more foo #1691

* removed empty default for datasetConfiguration #1691

* applied PR feedback #1691

* added flow types for react components #1691

* fixed keyboard delay

* updated frontend API to use Store for settings #1691

* fixed stylesheets order for and #1691

* fixed zoom slider logarithmic scale #1691

* fix antd less variable conflicts #1691

* fix linting errors #1691

* fixed zoom bug #1697

* makes LogSliderSetting more reusable

* fixes linting errors

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,4 +1,5 @@
 @import "../../../node_modules/bootstrap/less/bootstrap.less";
+@import "../../../node_modules/antd/dist/antd.css";
 @import (inline) "../../../node_modules/c3/c3.css";
 @import (inline) "../../../node_modules/bootstrap-daterangepicker/daterangepicker.css";
 @import (inline) "../../../node_modules/nouislider/distribute/nouislider.min.css";
