--- a/app/assets/stylesheets/trace_view/_settings.less
+++ b/app/assets/stylesheets/trace_view/_settings.less
@@ -14,6 +14,7 @@
 #settings-menu {
   width: @left-menu-width;
   padding: 10px 0px;
+  display: inline-block;
 
   .settings-row {
     margin-bottom: 10px;
