--- a/app/assets/stylesheets/trace_view/_settings.less
+++ b/app/assets/stylesheets/trace_view/_settings.less
@@ -14,7 +14,11 @@
 #settings-menu {
   width: @left-menu-width;
   padding: 10px 0px;
-  display: inline-block;
+  display: inline-flex;
+
+  & > .ant-tabs {
+    flex: 1;
+  }
 
   .settings-row {
     margin-bottom: 10px;
@@ -27,4 +31,3 @@
     display: inline-block;
   }
 }
-
