adds frontend documenation link

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -73,6 +73,9 @@
                   <a target="_blank" href="@routes.HelpController.faq"><i class="fa fa-stack-exchange fa-fw"></i>FAQ</a>
                 </li>
                 <li>
+                  <a target="_blank" href="/assets/docs/frontend-api/index.html"><i class="fa fa-book fa-fw"></i>Frontend API Documentation</a>
+                </li>
+                <li>
                   <a target="_blank" href="@routes.HelpController.keyboardShortcuts"><i class="fa fa-keyboard-o fa-fw"></i>Keyboard Shortcuts</a>
                 </li>
                 <li>
