sets abstract tree view height

--- a/app/assets/stylesheets/trace_view/_right_menu.less
+++ b/app/assets/stylesheets/trace_view/_right_menu.less
@@ -3,6 +3,7 @@
 
 #abstract-tree-canvas {
   flex-grow: 1;
+  min-height: 600px;
 }
 
 .tab-menu {
@@ -44,4 +45,3 @@
     margin-left: 20px;
   }
 }
-
