reactifies merge and share modals

--- a/app/assets/stylesheets/trace_view/_action_bar.less
+++ b/app/assets/stylesheets/trace_view/_action_bar.less
@@ -2,25 +2,12 @@
 
   padding-top: 10px;
 
-  :invalid {
-    border: 1px solid red;
-  }
-
-  .dataset-position-view .input-group {
-    width: 200px;
-  }
-
-  #trace-position-input {
-    width: 160px;
-  }
-
-  & > .container-fluid > div {
+  & > .container-fluid div {
     display: inline-block;
-    margin-right: 10px;
+    vertical-align: bottom;
   }
-
-  #upload-and-explore-form {
-    width: 100%;
+  & > .container-fluid > div {
+    margin-left: 5px;
+    margin-right: 5px;
   }
-
 }
