--- a/app/assets/stylesheets/trace_view/_action_bar.less
+++ b/app/assets/stylesheets/trace_view/_action_bar.less
@@ -1,30 +1,16 @@
 #action-bar {
-
   padding-top: 10px;
 
-  :invalid {
-    border: 1px solid red;
-  }
-
-  #trace-save-button {
-    width: 80px;
-  }
-
-  .dataset-position-view .input-group {
-    width: 200px;
-  }
-
-  #trace-position-input {
-    width: 160px;
-  }
-
-  & > .container-fluid > div {
+  & > .container-fluid div {
     display: inline-block;
-    margin-right: 15px;
+    vertical-align: bottom;
   }
-
-  #upload-and-explore-form {
-    width: 100%;
+  & > .container-fluid > div {
+    margin-left: 5px;
+    margin-right: 5px;
   }
+}
 
+.merge-modal .ant-form-item-label {
+  width: 150px;
 }
