--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -78,6 +78,7 @@
   padding-bottom: 20px;
   padding-right: 20px;
   padding-right: 20px;
+  height: ~"calc(100vh - 41px)";
   .ant-layout-header {
     height: auto;
     min-height: 64px;
@@ -89,7 +90,8 @@
     overflow: initial;
   }
   .ant-layout-sider {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 }
 .tracing-settings-menu {
