make comments and tree list overflow correctly by re-establishing the flexbox-hierarchy (#1709)

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -369,6 +369,16 @@ i {
   flex-grow: 1;
 }
 
+.flex-column-for-ant-tabs-container > div.ant-tabs-content {
+  flex-grow: 1;
+}
+
+.flex-overflow {
+  overflow-y: auto;
+  flex-grow: 1;
+  height: 0;
+}
+
 #add-script-input {
   width: 100%;
 }
