added script list #1168

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -43,6 +43,9 @@
                   <li>
                     <a href="/taskTypes">Task Types</a>
                   </li>
+                  <li>
+                    <a href="/scripts">Scripts</a>
+                  </li>
                 </ul>
               </li>
               <li class="dropdown">
