fixed most of the tracing view layout view with and

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -3,7 +3,6 @@
 @import (inline) "../../../node_modules/c3/c3.css";
 @import (inline) "../../../node_modules/bootstrap-daterangepicker/daterangepicker.css";
 @import (inline) "../../../node_modules/nouislider/distribute/nouislider.min.css";
-@import (inline) "../../../node_modules/bootstrap-toggle/css/bootstrap-toggle.css";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 @import "../../../node_modules/bootstrap-multiselect/dist/less/bootstrap-multiselect.less";
 @import "../../../node_modules/jasny-bootstrap/less/build/jasny-bootstrap.less";
@@ -25,6 +24,7 @@
 @import "trace_view/_settings.less";
 @import "_help.less";
 @import "_sort_table_icons.less";
+@import "antd_overwrites.less";
 
 
 // ----------------------- MAIN STYLES
