fixed tracing layout view

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -4,7 +4,7 @@
   display: inline-block;
   vertical-align: top;
 
-  margin-left: 20px;
+  margin: 0 20px;
 
   canvas {
     z-index: 10;
@@ -71,5 +71,15 @@
         background-color: #0f0;
       }
     }
+  }
+}
+
+.tracing-layout {
+
+  .ant-layout-content {
+    overflow: initial;
+  }
+  .ant-layout-sider {
+    min-width: 450px;
   }
 }
