replaced skeletontracing_view with view

--- a/app/assets/stylesheets/antd_overwrites.less
+++ b/app/assets/stylesheets/antd_overwrites.less
@@ -12,5 +12,9 @@
 }
 
 .ant-menu-horizontal {
-  border: none;
+  border: none!important;
+
+  & > .ant-menu-item-active, & > .ant-menu-item-selected {
+    border: none!important;
+  }
 }
