styling for action bar

--- a/app/assets/stylesheets/trace_view/_action_bar.less
+++ b/app/assets/stylesheets/trace_view/_action_bar.less
@@ -1,13 +1,13 @@
-#action-bar {
-  padding-top: 10px;
+.action-bar {
+  line-height: 48px;
 
-  & > .container-fluid div {
+  div {
     display: inline-block;
     vertical-align: bottom;
   }
-  & > .container-fluid > div {
-    margin-left: 5px;
-    margin-right: 5px;
+
+  & > div {
+    margin-left: 10px;
   }
 }
 
