restore flight mode switch

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -10,12 +10,10 @@
     z-index: 10;
   }
 
-  #arbitrary-info-canvas {
+  #flightmode-switch {
     position: absolute;
     top: 12px;
     left: 12px;
-    padding: 4px;
-    width: 148px;
   }
 
   #inputcatchers {
@@ -70,6 +68,8 @@
       }
     }
   }
+
+
 }
 
 .tracing-layout {
