--- a/app/views/pageSkeleton.scala.html
+++ b/app/views/pageSkeleton.scala.html
@@ -5,7 +5,7 @@
   <head>
     <title>webKnossos</title>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("bundle/main.css")">
+    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("bundle/main.css")?nocache=@(buildinfo.BuildInfo.gitHash)">
     @Html(com.newrelic.api.agent.NewRelic.getBrowserTimingHeader)
     <script type="text/javascript"
       data-airbrake-project-id=@play.api.Play.current.configuration.getString("airbrake.projectID")
@@ -18,7 +18,7 @@
     } else {
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     }
-
+    <meta name="git-hash" content="@(buildinfo.BuildInfo.gitHash)">
   </head>
   <body>
     @body
