Add route for buildinfo

--- a/app/views/pageSkeleton.scala.html
+++ b/app/views/pageSkeleton.scala.html
@@ -3,17 +3,17 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="git-hash" content="@(buildinfo.BuildInfo.gitHash)">
+    <meta name="commit-hash" content="@(buildinfo.BuildInfo.commitHash)">
     <title>webKnossos</title>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("bundle/main.css")?nocache=@(buildinfo.BuildInfo.gitHash)">
+    <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("bundle/main.css")?nocache=@(buildinfo.BuildInfo.commitHash)">
     @Html(com.newrelic.api.agent.NewRelic.getBrowserTimingHeader)
     <script type="text/javascript"
       data-airbrake-project-id=@play.api.Play.current.configuration.getString("airbrake.projectID")
       data-airbrake-project-key=@play.api.Play.current.configuration.getString("airbrake.projectKey")
       data-airbrake-environment-name=@play.api.Play.current.configuration.getString("airbrake.environment")></script>
-    <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")?nocache=@(buildinfo.BuildInfo.gitHash)"></script>
-    <script type="text/javascript" src="@routes.Assets.at("bundle/main.js")?nocache=@(buildinfo.BuildInfo.gitHash)"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/routes.js")?nocache=@(buildinfo.BuildInfo.commitHash)"></script>
+    <script type="text/javascript" src="@routes.Assets.at("bundle/main.js")?nocache=@(buildinfo.BuildInfo.commitHash)"></script>
     @if(play.api.Play.current.mode == play.api.Mode.Dev) {
       <link href='@routes.Assets.at("fonts/fonts-local.css")' rel='stylesheet' type='text/css' media="screen">
     } else {
