take care of proper layouting for too wide header (#1807)

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -73,6 +73,11 @@
 .tracing-layout {
   padding-bottom: 20px;
   padding-right: 20px;
+  padding-right: 20px;
+  .ant-layout-header {
+    height: auto;
+    min-height: 64px;
+  }
   &.ant-layout, & .ant-layout {
     overflow: initial;
   }
