Focused annotations - Part III (The Return of the Task Swap) (#1837)
* fixes viewForceReload

* make urlManager react to tracing swap (#1807)

* fix some tests (#1807)

* reset skeleton.js if the tracingId changed (#1807)

* fix tests (#1807)

* refactored Model

* fix allowedModes sorting

* fixes linting, flow and tests

* rename Tracing to ServerTracing (#1807)

* take care of converting mode-string to number for url (#1807)

* use TaskType for ServerTracing

* fixes allowedModes

* do not reinstantiate binaries on task hot swap, adapt get next task button to task hot swap (#1807)

* actually get next task on getNextTask button (#1807)

* move applyState into initializeTracing and ensure that we recover from a wrong activeNodeId

* take care of proper layouting for too wide header (#1807)

* fix allowedModes, preferredMode and viewModesView (#1807)

* fix jumping to start position and changing boundingboxes on task swap (#1807)

* fix linting (#1807)

* keep zoom step during hot swap (#1807)

* fix tests (#1807)

* reintroduce red border as a warning in volume mode if too zoomed out (#1807)

* fix tests and flow error (#1807)

* fixes allowedModes

* adds blur to dataset action buttons

* rename unpackMaybe to toNullable (#1807)

* make cubes-array entries non-optional (#1807)

* removes branchpointvideo and synapseannotation modes

* removes Controller.initTimeLimit

* replaces values with constants

* removes UrlManager reference from Controller

* changed boolean names

* add showToast to api (#1807)

* move finishAndGetNextTask code into api (#1807)

* fixed 3D controls #1807

* dispose old GPU buffers when resetting skeletons #1807

* show tree & nodes settings #1807

* do not display segmentation warning if there is no segmentation #1807

* do not display segmentation warning if the view mode doesn't support segmentation #1807

* fix reload bug #1807

* fixes linting

--- a/app/assets/stylesheets/trace_view/_tracing_view.less
+++ b/app/assets/stylesheets/trace_view/_tracing_view.less
@@ -70,9 +70,18 @@
   }
 }
 
+.zoomstep-warning {
+  border: 5px solid red;
+}
+
 .tracing-layout {
   padding-bottom: 20px;
   padding-right: 20px;
+  padding-right: 20px;
+  .ant-layout-header {
+    height: auto;
+    min-height: 64px;
+  }
   &.ant-layout, & .ant-layout {
     overflow: initial;
   }
