Focused annotations - The Trilogy (#1839)
* changes skeletonTracing to union type

* renamed skeletonTracing to generic tracing

* adds volumetracing actions

* #1752 further reduxify volumetracing, create volumetracing accessors and implement reducers for setMode and toggleMode

* #1752 further reduxify volumetracing, reducers for createCell, setActiveCell + code cleanup

* #1752 finish reduxifying volumetracings, create saga for cell annotation process, use save saga for volumetracings as well, generalize save saga, error fixes, remove unused files

* #1752 fix tests and add first volumetracing saga tests

* #1752 add volumetracing saga annotation and reducer tests, fix inconsistencies with the idCount, don't abort the editVolumeLayerAsync function - use continue instead of break there

* #1752 apply first PR feedback

* #1757 apply first PR feedback

* merged master --> volumetracing-redux #1752

* fix for merge #1752

* #1757 apply PR feedback part 1

* #1757 apply PR feedback part 2

* #1757 apply PR feedback part 3 and strict flow check for volume files

* trigger isosurface updates from saga #1757

* #1757 do not try to update frozen objects, fix read only data layer error

* fixed flow error #1757

* linter, oh my linter #1757

* fix merge errors

* convert backbone attributes in model to proper properties (no pun intended) (#1807)

* move model.mode into store (+ rewiring all listeners) and rename some modes to gain sanity in this mode-confusion (#1807)

* fix tests (#1807)

* satisfy linter (#1807)

* move flightmodeRecording into store (#1807)

* move userBoundingBox into the store so that we have no backbone-listeners on model properties anymore (#1807)

* remove unused import (#1807)

* apply some PR feedback: use connect when possible and change missing viewMode renamings (#1807)

* #1757 introduce assertExists in newer api version as well, fix error in tests that caused them to fail sometimes



--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -3,7 +3,6 @@
 @import (inline) "../../../node_modules/c3/c3.css";
 @import (inline) "../../../node_modules/bootstrap-daterangepicker/daterangepicker.css";
 @import (inline) "../../../node_modules/nouislider/distribute/nouislider.min.css";
-@import (inline) "../../../node_modules/bootstrap-toggle/css/bootstrap-toggle.css";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 @import "../../../node_modules/bootstrap-multiselect/dist/less/bootstrap-multiselect.less";
 @import "../../../node_modules/jasny-bootstrap/less/build/jasny-bootstrap.less";
@@ -22,9 +21,9 @@
 @import "trace_view/_tracing_view.less";
 @import "trace_view/_action_bar.less";
 @import "trace_view/_right_menu.less";
-@import "trace_view/_settings.less";
 @import "_help.less";
 @import "_sort_table_icons.less";
+@import "antd_overwrites.less";
 
 
 // ----------------------- MAIN STYLES
@@ -340,10 +339,6 @@ td.nowrap * {
     visibility: hidden;
 }
 
-#optionswindow select {
-  color: black;
-}
-
 //submit issue form
 textarea[name=description] {
   height: 100px;
@@ -367,16 +362,6 @@ i {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-}
-
-.flex-column-for-ant-tabs-container > div.ant-tabs-content {
-  flex-grow: 1;
-}
-
-.flex-overflow {
-  overflow-y: auto;
-  flex-grow: 1;
-  height: 0;
 }
 
 #add-script-input {
