--- a/app/assets/stylesheets/trace_view/_right_menu.less
+++ b/app/assets/stylesheets/trace_view/_right_menu.less
@@ -4,25 +4,7 @@
 #abstract-tree-canvas {
   flex-grow: 1;
   min-height: 600px;
-}
-
-.tab-menu {
-  display: inline-flex;
-  flex-direction: column;
-  margin: 10px;
-  overflow: hidden;
-  height: calc(100vh ~"-" @navbar-height ~"-" 20px ~"-" @action-bar-height); // 20px = 2 * 10px margin
-}
-
-#right-menu {
-
-  .tab-menu;
-  padding: 10px 0px;
-  width: 351px; // will be set dynamically in JS
-
-  ul {
-    overflow-y: auto;
-  }
+  width: 100%;
 }
 
 #tree-list {
@@ -34,7 +16,6 @@
   .ant-input-group {
     margin: 10px 0px;
   }
-
 }
 
 #comment-list {
