finish dataset_import_view #1896

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -44,3 +44,14 @@
     padding: 0px;
   }
 }
+
+#dataset-import-view {
+  .content {
+    margin: 20px 0px;
+    text-align: center;
+  }
+
+  button {
+    margin-right: 10px;
+  }
+}
