renamed dataset import route and show only one error toast

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -46,6 +46,11 @@
 }
 
 #dataset-import-view {
+
+  h3 {
+    margin-bottom: 30px;
+  }
+
   .content {
     margin: 20px 0px;
     text-align: center;
