--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -48,6 +48,7 @@
 #dataset-import-view {
 
   h3 {
+    margin-top: 20px;
     margin-bottom: 30px;
   }
 
@@ -58,5 +59,6 @@
 
   button {
     margin-right: 10px;
+    margin-top: 30p;
   }
 }
