permanently show import erros #1896

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -53,12 +53,14 @@
   }
 
   .content {
-    margin: 20px 0px;
     text-align: center;
+  }
+
+  textarea, .ant-checkbox-wrapper, p, .ant-alert {
+    margin-bottom: 20px;
   }
 
   button {
     margin-right: 10px;
-    margin-top: 30p;
   }
 }
