add login to navbar if logged out, add link to webknossos.org to spotlight page

--- a/app/views/mainHeader.scala.html
+++ b/app/views/mainHeader.scala.html
@@ -112,14 +112,13 @@
             </li>
           </ul>
         }.getOrElse {
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="@controllers.routes.Authentication.login(None)">Login</a>
-            </li>
-            <li>
-              <a href="@controllers.routes.Authentication.register()">Sign up</a>
-            </li>
-          </ul>
+            <a href="@controllers.routes.Authentication.register()" class="btn btn-default navbar-btn navbar-right">Sign up</a>
+            <form action="/auth/login" method="POST" class="navbar-form navbar-right">
+              <input type="email" id="email" name="email" placeholder="Email" class="form-control">
+              <input type="password" id="password" name="password" placeholder="Password" class="form-control">
+              <button type="submit" class="form-control btn btn-primary">Login</button>
+              <input type="hidden" name="redirect" value="">
+            </form>
         }
       </div>
     </div>
