--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -8,7 +8,6 @@
 @import "../../../node_modules/jasny-bootstrap/less/build/jasny-bootstrap.less";
 
 @import "_variables.less";
-@import "admin/_user.less";
 @import "admin/_team.less";
 @import "admin/_dataset.less";
 @import "admin/_pagination.less";
@@ -87,6 +86,10 @@ body:-webkit-full-screen {
 
 // Only affect child items in tables
 td.nowrap * {
+  white-space: nowrap;
+}
+
+.nowrap {
   white-space: nowrap;
 }
 
