add undo/redo to documentation, add super+z/y as possible shortcut for mac users (#1925)

--- a/app/views/help/keyboardshortcuts.scala.html
+++ b/app/views/help/keyboardshortcuts.scala.html
@@ -49,6 +49,8 @@
       </tr>
     </thead>
     <tbody>
+      <tr><td>Ctrl/Cmd + Z</td><td>Undo</td></tr>
+      <tr><td>Ctrl/Cmd + Y</td><td>Redo</td></tr>
       <tr><td>P, N</td><td>Previous/Next comment</td></tr>
       <tr><td>Del</td><td>Delete node/Split trees</td></tr>
       <tr><td>C</td><td>Create new tree</td></tr>
