--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -15,7 +15,6 @@
 @import "admin/_project.less";
 @import "admin/_statistics.less";
 @import "_bootstrap_addons.less";
-@import "_datasets.less";
 @import "_dashboard.less";
 @import "trace_view/_tracing_view.less";
 @import "trace_view/_action_bar.less";
@@ -23,7 +22,6 @@
 @import "_help.less";
 @import "_sort_table_icons.less";
 @import "antd_overwrites.less";
-
 
 // ----------------------- MAIN STYLES
 body {
@@ -50,7 +48,6 @@ body:-webkit-full-screen {
   padding-top: 10px;
   padding-bottom: 10px;
   height: @navbar-height;
-
 }
 .navbar span.navbar-brand:hover {
   color: #999;
@@ -94,13 +91,11 @@ td.nowrap * {
 }
 
 .table-details {
-
   .details-row > td {
     box-shadow: inset 0 0 10px rgba(180, 180, 180, .2);
   }
   .details-toggle,
   .details-toggle-all {
-
     cursor: pointer;
 
     .caret-down {
@@ -187,17 +182,39 @@ td.nowrap * {
   }
 
   @keyframes alert-wiggle {
-    0%  { transform: translateX(0px); }
-    2%  { transform: translateX(10px); }
-    4%  { transform: translateX(-10px); }
-    6%  { transform: translateX(10px); }
-    8%  { transform: translateX(-10px); }
-    10% { transform: translateX(10px); }
-    12% { transform: translateX(-10px); }
-    14% { transform: translateX(10px); }
-    16% { transform: translateX(-10px); }
-    18% { transform: translateX(10px); }
-    20% { transform: translateX(0px); }
+    0% {
+      transform: translateX(0px);
+    }
+    2% {
+      transform: translateX(10px);
+    }
+    4% {
+      transform: translateX(-10px);
+    }
+    6% {
+      transform: translateX(10px);
+    }
+    8% {
+      transform: translateX(-10px);
+    }
+    10% {
+      transform: translateX(10px);
+    }
+    12% {
+      transform: translateX(-10px);
+    }
+    14% {
+      transform: translateX(10px);
+    }
+    16% {
+      transform: translateX(-10px);
+    }
+    18% {
+      transform: translateX(10px);
+    }
+    20% {
+      transform: translateX(0px);
+    }
   }
   .alert-wiggle {
     animation: alert-wiggle 5s infinite;
@@ -257,7 +274,6 @@ td.nowrap * {
 }
 
 #oxalis-header {
-
   margin-bottom: 40px;
   margin-left: 34px;
   margin-top: 20px;
@@ -282,9 +298,9 @@ td.nowrap * {
   text-align: center;
 }
 
-#impressum{
-  h5{
-  margin-top: 2em;
+#impressum {
+  h5 {
+    margin-top: 2em;
   }
 }
 
@@ -308,13 +324,13 @@ td.nowrap * {
 }
 
 #merge {
-    width: 280px;
-    padding: 10px;
-    position: absolute;
-    top: 240px;
-    left: 0px;
-    background-color: #aaf;
-    visibility: hidden;
+  width: 280px;
+  padding: 10px;
+  position: absolute;
+  top: 240px;
+  left: 0px;
+  background-color: #aaf;
+  visibility: hidden;
 }
 
 //submit issue form
@@ -367,7 +383,6 @@ i {
   font-family: monospace;
   font-size: 14px;
 }
-
 
 img.img-50 {
   width: 47%;
