restore icon size CSS #1938

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -72,3 +72,14 @@
     margin-right: 10px;
   }
 }
+
+.dataset-actions {
+  a {
+    display: block;
+
+    img {
+      width: 20px;
+    }
+  }
+}
+
