--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -20,37 +20,6 @@
   }
 }
 
-.dataset-thumbnail-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 200px;
-  position: absolute;
-  top: 0px;
-
-  a {
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.8);
-    display: inline-block;
-    position: relative;
-    margin: 0 3px;
-
-    img {
-      width: 25px;
-      height: 25px;
-      margin: 7.5px;
-      filter: invert(1);
-      -webkit-filter: invert(1);
-    }
-  }
-  a:hover {
-    background: rgba(0, 0, 0, 1.0);
-  }
-}
-
 #dataset-import-view {
   h3 {
     margin-top: 20px;
@@ -83,3 +52,55 @@
   }
 }
 
+.spotlight-item-card {
+  height: 400px;
+  background-size: cover;
+  position: relative;
+
+  .dataset-thumbnail-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+
+    a {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.8);
+      display: inline-block;
+      position: relative;
+      margin: 0 3px;
+
+      img {
+        width: 25px;
+        height: 25px;
+        margin: 7.5px;
+        filter: invert(1);
+        -webkit-filter: invert(1);
+      }
+    }
+    a:hover {
+      background: rgba(0, 0, 0, 1.0);
+    }
+  }
+
+  .dataset-description {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.7);
+    color: white;
+    padding: 10px 16px;
+
+    h3 {
+      word-wrap: break-word;
+    }
+
+    p {
+      font-size: 14px;
+      white-space: pre-wrap;
+    }
+  }
+}
