style spotlight cards some more #1938

--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -65,6 +65,7 @@
     height: 200px;
 
     a {
+      box-shadow: white 0px 0px 4px;
       width: 40px;
       height: 40px;
       border-radius: 10px;
