use proper link in over-limit-emails, fixes #1968

--- a/app/views/mail/timeLimit.scala.html
+++ b/app/views/mail/timeLimit.scala.html
@@ -1,10 +1,10 @@
-@(userName: String, projectName: String, taskId: String, uri: String)
+@(userName: String, projectName: String, taskId: String, annotationId: String, uri: String)
 Time limit reached for
 
   User: @userName
   Project: @projectName
   Task: @taskId
 
-  @{uri}/annotations/Task/@taskId
+  @{uri}/annotations/Task/@annotationId
 
 Your webKnossos Team
