--- a/app/views/impressum.scala.html
+++ b/app/views/impressum.scala.html
@@ -5,11 +5,12 @@
     <h2>Legal notice</h2>
     <h3>scalable minds UG (haftungsbeschränkt) & Co. KG</h3>
     <p>Amtsgericht Potsdam, HRA 5753</p>
-    <p>Geschäftsführer: Tom Bocklisch, Tom Herold, Norman Rzepka, Thomas Werkmeister</p>
+    <p>Geschäftsführer: scalable minds Verwaltungs UG
+    <p>(vertreten durch Tom Bocklisch, Tom Herold, Norman Rzepka)</p>
     <p>USt-Id. DE283513495</p>
 
     <h5>Visiting address</h5>
-    <p>Stahnsdorfer Str. 152a</p>
+    <p>Großbeerenstraße 15</p>
     <p>14482 Potsdam</p>
 
     <h5>Contact</h5>
