--- a/app/assets/stylesheets/_dashboard.less
+++ b/app/assets/stylesheets/_dashboard.less
@@ -94,6 +94,8 @@
     background-color: rgba(51, 51, 51, 0.7);
     color: white;
     padding: 10px 16px;
+    max-height: 65%;
+    overflow-y: auto;
 
     h3 {
       word-wrap: break-word;
