--- a/app/assets/stylesheets/admin/_task.less
+++ b/app/assets/stylesheets/admin/_task.less
@@ -98,3 +98,16 @@
     }
   }
 }
+
+.task-type-description {
+  ul, ol {
+    padding-left: 1.5em;
+    list-style: initial;
+  }
+  ul {
+    list-style: circle;
+  }
+  ol {
+    list-style: decimal;
+  }
+}
